Fix for reading IMAPMessage as text/html

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,11 @@ server.port=8080
 spring.output.ansi.enabled=ALWAYS
 
 email.address = sqa.defenders.test@gmail.com
-email.password = ...
+email.password = xusihtiwppxjatwb
 email.server = imap.gmail.com
 email.port = 993
+email.proxy.host = web-proxy.corp.hp.com
+email.proxy.port = 8080
 email.protocol = imaps
 email.folder = Inbox
-email.fetch.size = 10
+email.fetch.size = 1
